[package]
name = "saft"
authors = ["Simon Perriard <simon.perriard@epfl.ch>"]
description = "SAFT: Static Analyzer for Frame palleTs, Static analyzer to count database accesses for FRAME pallets, based on abtract interpretation of the MIR"
repository = "https://github.com/simon-perriard/saft"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "cargo-saft"
path = "src/main.rs"

[[bin]]
name = "saft-driver"
path = "src/driver.rs"

[dependencies]
saft_analysis = { path = "saft_analysis" }
rustc_tools_util = "*"
cargo_metadata = "*"
serde_json = "*"
env_logger = "*"
log = "*"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true