[package]
name = "saft"
authors = ["Simon Perriard <simon.perriard@epfl.ch>"]
description = "SAFT: Static Analyzer for Frame palleTs, Static analyzer to count database accesses for FRAME pallets, based on abtract interpretation of the MIR"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
cargo_metadata = "*"
serde_json = "*"
rustc_tools_util = "*"
serde = {version = "*", features = ["derive", "alloc", "rc"] }
itertools = "*"
log = "*"
shellwords = "*"
clap = "*"
rpds = "*"
regex = "*"
options = { path = "../options" }