[package]
name = "saft_analysis"
authors = ["Simon Perriard <simon.perriard@epfl.ch>"]
description = "SAFT: Static Analyzer for Frame palleTs, Static analyzer to count database accesses for FRAME pallets, based on abtract interpretation of the MIR"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cargo_metadata = "*"
serde_json = "*"
serde = {version = "*", features = ["derive", "alloc", "rc"] }
itertools = "*"
log = "*"
shellwords = "*"
clap = "*"
rpds = "*"
regex = "*"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true